# rs-vgaligner

./: .gitignore  .gitmodules  Cargo.toml  README.md
experiments-snakemake/: Snakefile  clean.sh  commands.sh  config.yaml  gafcompare.py  gafcompareGraphaligner.py
experiments-snakemake/2-DRB1-3123/: graph.gfa
experiments-snakemake/20-C3107-smooth/: graph.gcsa  graph.gcsa.lcp  graph.vg  graph.xg
experiments/1-simple/: aln.gam  commands.sh  graph.idx  reads.fa  reads_header-alignments.gaf  reads_header-alignments.gam  reads_header-chains.gaf  reads_header.fa
experiments/2-DRB1/: DRB1-3123.fa.3e183dc.7bdde5a.d2ef83a.smooth.idx-aligned.gaf  aln.gaf  aln.gam  reads-alignments.gaf  reads-chains.gaf  reads.fa  reads.gaf  single-read.fa
src/: align.rs  chain.rs  dna.rs  index.rs  io.rs  kmer.rs  main.rs  map.rs  serialization.rs  utils.rs  validate.rs
src/subcommands/: cli.yml  index_main.rs  map_main.rs
test/: .idx  multiple-read-test.fa  single-read-test-alignments.gaf  single-read-test-chains.gaf  single-read-test.fa  test-no-headers.fa  test-xg  test.fa  test.fq  test.gcsa  test.gcsa.lcp  test.vg  vg_result.gaf  vg_result.gam
