[package]
name = "vgaligner"
version = "0.1.0"
authors = ["Francesco Porto <francesco.porto97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlegraph = "0.5.0"
gfa = "0.8.0"
clap = "2.33.3"
bstr = "0.2.15"
bv = "0.11.1"
rayon = "1.5.0"

# Minimal Perfect Hash Funnction, it's bbhash with another name
boomphf = "0.5.9"

substring = "1.4.5"
ahash = "0.7.2"
bincode = "1.3.3"
serde = "1.0.125"
serde_with = "1.8.1"
