[package]
name = "vgaligner"
version = "1.0.0"
authors = ["Francesco Porto <francesco.porto97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlegraph = "0.5.0"
gfa = "0.8.0"
clap = {version = "2.33.3", features = ["yaml"]}
bstr = "0.2.15"
bv = "0.11.1"
#rayon = "1.5.0"
regex = "1"

# Minimal Perfect Hash Function, it's bbhash with another name
boomphf = {version = "0.5.9", features = ["serde"]}

substring = "1.4.5"
ahash = "0.7.2"
#ahash = {git="https://github.com/tkaitchuck/aHash"}
itertools = "0.10.1"

# Used in the index (IITree = Implicit Interval Tree)
bio = "0.37.0"

float-cmp = "0.9.0"

serde = {version = "1.0.125", features = ["derive"]}
bincode = "1.3.3"
serde_json = "1.0"
serde_with = "1.8.1"
bitvector = "0.1.5"

# abpoa partial order aligner
ab_poa = {git = "https://github.com/HopedWall/rs-abpoa"}
#ab_poa = {path = "../rs-abPOA"}
seal = {git = "https://github.com/regexident/rust-seal"}
rspoa = {git = "https://github.com/AlgoLab/rspoa"}

# profiling
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
env_logger = "0.9.0"

# mocking
mockall = "0.11.0"

# validation
json = "0.12.4"
